--- a/views/admin/adminlogin.ejs
+++ b/views/admin/adminlogin.ejs
@@ -26,7 +26,7 @@
                 </a>
             </div>
             <div class="col-nav">
-                <ul class="nav">
+                <!-- <ul class="nav">
                     <li class="nav-item">
                         <a class="nav-link btn-icon" href="#">
                             <i class="material-icons md-notifications animation-shake"></i>
@@ -60,7 +60,7 @@
                             <a class="dropdown-item text-danger" href="#"><i class="material-icons md-exit_to_app"></i>Logout</a>
                         </div>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </header>
         <section class="content-main mt-80 mb-80">
@@ -75,10 +75,10 @@
                             <input class="form-control" placeholder="Password" type="password" name="password">
                         </div> <!-- form-group// -->
                         <div class="mb-3">
-                            <a href="#" class="float-end font-sm text-muted">Forgot password?</a>
+                            <!-- <a href="#" class="float-end font-sm text-muted">Forgot password?</a> -->
                             <label class="form-check">
-                                <input type="checkbox" class="form-check-input" checked="">
-                                <span class="form-check-label">Remember</span>
+                                <!-- <input type="checkbox" class="form-check-input" checked="">
+                                <span class="form-check-label">Remember</span> -->
                             </label>
                         </div> 
                        <!-- form-group form-check .// -->
@@ -96,12 +96,12 @@
         </section>
 
         <footer class="main-footer text-center">
-            <p class="font-xs">
+            <!-- <p class="font-xs">
                 <script>
                 document.write(new Date().getFullYear())
                 </script> ©, Evara - HTML Ecommerce Template .
             </p>
-            <p class="font-xs mb-30">All rights reserved</p>
+            <p class="font-xs mb-30">All rights reserved</p> -->
         </footer>
 
 
