--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -77,17 +77,17 @@
                             </table>
                         </div>
                         <div class="cart-action text-end">
-                            <a class="btn  mr-10 mb-sm-15"><i class="fi-rs-shuffle mr-10"></i>Update Cart</a>
-                            <a class="btn "><i class="fi-rs-shopping-bag mr-10"></i>Continue Shopping</a>
+                            <!-- <a class="btn  mr-10 mb-sm-15"><i class="fi-rs-shuffle mr-10"></i>Update Cart</a> -->
+                            <a href = "/shop" class="btn "><i class="fi-rs-shopping-bag mr-10"></i>Continue Shopping</a>
                         </div>
-                        <div class="divider center_icon mt-50 mb-50"><i class="fi-rs-fingerprint"></i></div>
+                        <!-- <div class="divider center_icon mt-50 mb-50"><i class="fi-rs-fingerprint"></i></div>
                         <div class="row mb-50">
                             <div class="col-lg-6 col-md-12">
-                                <div class="heading_s1 mb-3">
-                                    <h4>Calculate Shipping</h4>
+                                <div class="heading_s1 mb-3"> -->
+                                    <!-- <h4>Calculate Shipping</h4> -->
                                 </div>
-                                <p class="mt-15 mb-30">Flat rate: <span class="font-xl text-brand fw-900">5%</span></p>
-                                <form class="field_form shipping_calculator">
+                                <!-- <p class="mt-15 mb-30">Flat rate: <span class="font-xl text-brand fw-900">5%</span></p> -->
+                                <!-- <form class="field_form shipping_calculator">
                                     <div class="form-row">
                                         <div class="form-group col-lg-12">
                                             <div class="custom_select">
@@ -354,10 +354,10 @@
                                             <button class="btn  btn-sm"><i class="fi-rs-shuffle mr-10"></i>Update</button>
                                         </div>
                                     </div>
-                                </form>
+                                </form> -->
                                 <div class="mb-30 mt-50">
                                     <div class="heading_s1 mb-3">
-                                        <h4>Apply Coupon</h4>
+                                        <!-- <h4>Apply Coupon</h4> -->
                                     </div>
                                     <div class="total-amount">
                                         <div class="left">
@@ -365,10 +365,10 @@
                                                 <form action="#" target="_blank">
                                                     <div class="form-row row justify-content-center">
                                                         <div class="form-group col-lg-6">
-                                                            <input class="font-medium" name="Coupon" placeholder="Enter Your Coupon">
+                                                            <!-- <input class="font-medium" name="Coupon" placeholder="Enter Your Coupon"> -->
                                                         </div>
                                                         <div class="form-group col-lg-6">
-                                                            <button class="btn  btn-sm"><i class="fi-rs-label mr-10"></i>Apply</button>
+                                                            <!-- <button class="btn  btn-sm"><i class="fi-rs-label mr-10"></i>Apply</button> -->
                                                         </div>
                                                     </div>
                                                 </form>
@@ -377,7 +377,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-12">
+                            <div class="col-lg-6 col-md-12 mx-auto">
                                 <div class="border p-md-4 p-30 border-radius cart-totals">
                                     <div class="heading_s1 mb-3">
                                         <h4>Cart Totals</h4>
@@ -402,9 +402,10 @@
                                     </div>
                                     <a href="" id="checkoutButton" class="btn">
                                         <i class="fi-rs-box-alt mr-10"></i> Proceed To CheckOut
-                                      </a>
+                                    </a>
                                 </div>
                             </div>
+                            
                         </div>
                     </div>
                 </div>
