--- a/views/users/shop.ejs
+++ b/views/users/shop.ejs
@@ -17,7 +17,7 @@
           <div class="shop-product-fillter">
             <div class="totall-product">
               <p>
-                We found <strong class="text-brand">688</strong> items for you!
+                <!-- We found <strong class="text-brand">688</strong> items for you! -->
               </p>
             </div>
             <div class="sort-by-product-area">
@@ -158,7 +158,7 @@
 
           <!--pagination-->
           <div class="pagination-area mt-15 mb-sm-5 mb-lg-0">
-            <nav aria-label="Page navigation example">
+            <!-- <nav aria-label="Page navigation example">
               <ul class="pagination justify-content-start">
                 <li class="page-item active">
                   <a class="page-link" href="#">01</a>
@@ -172,7 +172,7 @@
                 <li class="page-item">
                   <a class="page-link" href="#"
                     ><i class="fi-rs-angle-double-small-right"></i
-                  ></a>
+                  ></a> -->
                 </li>
               </ul>
             </nav>
