--- a/views/admin/addnewproduct.ejs
+++ b/views/admin/addnewproduct.ejs
@@ -103,7 +103,7 @@
     <main class="main-wrap">
         <header class="main-header navbar">
             <div class="col-search">
-                <form class="searchform">
+                <!-- <form class="searchform">
                     <div class="input-group">
                         <input list="search_terms" type="text" class="form-control" placeholder="Search term">
                         <button class="btn btn-light bg" type="button"> <i class="material-icons md-search"></i></button>
@@ -114,11 +114,11 @@
                         <option value="Apple iphone">
                         <option value="Ahmed Hassan">
                     </datalist>
-                </form>
+                </form> -->
             </div>
             <div class="col-nav">
                 <button class="btn btn-icon btn-mobile me-auto" data-trigger="#offcanvas_aside"> <i class="material-icons md-apps"></i> </button>
-                <ul class="nav">
+                <!-- <ul class="nav">
                     <li class="nav-item">
                         <a class="nav-link btn-icon" href="#">
                             <i class="material-icons md-notifications animation-shake"></i>
@@ -139,9 +139,10 @@
                             <a class="dropdown-item" href="#"><img src="Adminassets/imgs/theme/flag-jp.png" alt="Français">日本語</a>
                             <a class="dropdown-item" href="#"><img src="Adminassets/imgs/theme/flag-cn.png" alt="Français">中国人</a>
                         </div>
-                    </li>
-                    <li class="dropdown nav-item">
-                        <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownAccount" aria-expanded="false"> <img class="img-xs rounded-circle" src="Adminassets/imgs/people/avatar2.jpg" alt="User"></a>
+                    </li> -->
+                    <li class="">
+                      <a class="" data-bs-toggle="" href="#" id="dropdownAccount" aria-expanded="false"> <img class="img-xs rounded-circle" src="/Adminassets/imgs/people/avatar5.jpg" alt="User"></a>
+                  </li>
                         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownAccount">
                             <a class="dropdown-item" href="#"><i class="material-icons md-perm_identity"></i>Edit Profile</a>
                             <a class="dropdown-item" href="#"><i class="material-icons md-settings"></i>Account Settings</a>
@@ -217,7 +218,7 @@
                     
 
         <footer class="main-footer font-xs">
-            <div class="row pb-30 pt-15">
+            <!-- <div class="row pb-30 pt-15">
                 <div class="col-sm-6">
                     <script>
                     document.write(new Date().getFullYear())
@@ -229,7 +230,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
     </main>
 
     <script src="Adminassets/js/vendors/jquery-3.6.0.min.js"></script>
