--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -63,33 +63,33 @@
         </nav>
     </aside>
     <main class="main-wrap">
-        <header class="main-header navbar">
-            <div class="col-search">
-                <form class="searchform">
-                    <div class="input-group">
-                        <input list="search_terms" type="text" class="form-control" placeholder="Search term">
-                        <button class="btn btn-light bg" type="button"> <i class="material-icons md-search"></i></button>
-                    </div>
-                    <datalist id="search_terms">
-                    </datalist>
-                </form>
+      <header class="main-header navbar">
+          <div class="col-search">
+              <!-- <form class="searchform">
+                  <div class="input-group">
+                      <input list="search_terms" type="text" class="form-control" placeholder="Search term">
+                      <button class="btn btn-light bg" type="button"> <i class="material-icons md-search"></i></button>
+                  </div>
+                  <datalist id="search_terms">
+                  </datalist>
+              </form> -->
             </div>
             <div class="col-nav">
                 <button class="btn btn-icon btn-mobile me-auto" data-trigger="#offcanvas_aside"> <i class="material-icons md-apps"></i> </button>
                 <ul class="nav">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link btn-icon" href="#">
                             <i class="material-icons md-notifications animation-shake"></i>
                             <span class="badge rounded-pill">3</span>
                         </a>
-                    </li>
-                    <li class="nav-item">
+                    </li> -->
+                    <!-- <li class="nav-item">
                         <a class="nav-link btn-icon darkmode" href="#"> <i class="material-icons md-nights_stay"></i> </a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="requestfullscreen nav-link btn-icon"><i class="material-icons md-cast"></i></a>
-                    </li>
-                    <li class="dropdown nav-item">
+                    </li> -->
+                    <!-- <li class="dropdown nav-item">
                         <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownLanguage" aria-expanded="false"><i class="material-icons md-public"></i></a>
                         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownLanguage">
                             <a class="dropdown-item text-brand" href="#"><img src="/Adminassets/imgs/theme/flag-us.png" alt="English">English</a>
@@ -97,10 +97,10 @@
                             <a class="dropdown-item" href="#"><img src="/Adminassets/imgs/theme/flag-jp.png" alt="Français">日本語</a>
                             <a class="dropdown-item" href="#"><img src="/Adminassets/imgs/theme/flag-cn.png" alt="Français">中国人</a>
                         </div>
-                    </li>
-                    <li class="dropdown nav-item">
-                        <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownAccount" aria-expanded="false"> <img class="img-xs rounded-circle" src="/Adminassets/imgs/people/avatar2.jpg" alt="User"></a>
-                    </li>
+                    </li> -->
+                    <li class="">
+                      <a class="" data-bs-toggle="" href="#" id="dropdownAccount" aria-expanded="false"> <img class="img-xs rounded-circle" src="/Adminassets/imgs/people/avatar5.jpg" alt="User"></a>
+                  </li>
                 </ul>
             </div>
         </header>
@@ -190,7 +190,7 @@
 
 
         <footer class="main-footer font-xs">
-            <div class="row pb-30 pt-15">
+            <!-- <div class="row pb-30 pt-15">
                 <div class="col-sm-6">
                     <script>
                     document.write(new Date().getFullYear())
@@ -201,7 +201,7 @@
                         All rights reserved
                     </div>
                 </div>
-            </div>
+            </div> -->
         </footer>
     </main>
 
