--- a/views/admin/order.ejs
+++ b/views/admin/order.ejs
@@ -124,19 +124,19 @@
             <div class="content-header">
                 <div>
                     <h2 class="content-title card-title">Order List </h2>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p></p>
                 </div>
                 <div>
-                    <input type="text" placeholder="Search order ID" class="form-control bg-white">
+                    <!-- <input type="text" placeholder="Search order ID" class="form-control bg-white"> -->
                 </div>
             </div>
             <div class="card mb-4">
                 <header class="card-header">
                     <div class="row gx-3">
                         <div class="col-lg-4 col-md-6 me-auto">
-                            <input type="text" placeholder="Search..." class="form-control">
+                            <!-- <input type="text" placeholder="Search..." class="form-control"> -->
                         </div>
-                        <div class="col-lg-2 col-6 col-md-3">
+                        <!-- <div class="col-lg-2 col-6 col-md-3">
                             <select class="form-select">
                                 <option>Status</option>
                                 <option>Active</option>
@@ -150,7 +150,7 @@
                                 <option>Show 30</option>
                                 <option>Show 40</option>
                             </select>
-                        </div>
+                        </div> -->
                     </div>
                 </header> <!-- card-header end// -->
                 <div class="card-body">
@@ -230,7 +230,7 @@
                     </div> 
                 </div> 
             </div>
-            <div class="pagination-area mt-15 mb-50">
+            <!-- <div class="pagination-area mt-15 mb-50">
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-start">
                 <% for (let i = 1; i <= totalPages; i++) { %>
@@ -240,7 +240,7 @@
                 <% } %>
             </ul>
         </nav>
-    </div>
+    </div> -->
         </section> 
 
 
@@ -250,7 +250,7 @@
 
 
         <footer class="main-footer font-xs">
-            <div class="row pb-30 pt-15">
+            <!-- <div class="row pb-30 pt-15">
                 <div class="col-sm-6">
                     <script>
                     document.write(new Date().getFullYear())
@@ -261,7 +261,7 @@
                         All rights reserved
                     </div>
                 </div>
-            </div>
+            </div> -->
         </footer>
     </main>
 
