--- a/views/admin/product.ejs
+++ b/views/admin/product.ejs
@@ -65,18 +65,18 @@
     <main class="main-wrap">
         <header class="main-header navbar">
             <div class="col-search">
-                <form class="searchform">
+                <!-- <form class="searchform">
                     <div class="input-group">
                         <input list="search_terms" type="text" class="form-control" placeholder="Search term">
                         <button class="btn btn-light bg" type="button"> <i class="material-icons md-search"></i></button>
                     </div>
                     <datalist id="search_terms">
                     </datalist>
-                </form>
+                </form> -->
             </div>
             <div class="col-nav">
                 <button class="btn btn-icon btn-mobile me-auto" data-trigger="#offcanvas_aside"> <i class="material-icons md-apps"></i> </button>
-                <ul class="nav">
+                <!-- <ul class="nav">
                     <li class="nav-item">
                         <a class="nav-link btn-icon" href="#">
                             <i class="material-icons md-notifications animation-shake"></i>
@@ -88,8 +88,8 @@
                     </li>
                     <li class="nav-item">
                         <a href="#" class="requestfullscreen nav-link btn-icon"><i class="material-icons md-cast"></i></a>
-                    </li>
-                    <li class="dropdown nav-item">
+                    </li> -->
+                    <!-- <li class="dropdown nav-item">
                         <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownLanguage" aria-expanded="false"><i class="material-icons md-public"></i></a>
                         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownLanguage">
                             <a class="dropdown-item text-brand" href="#"><img src="/Adminassets/imgs/theme/flag-us.png" alt="English">English</a>
@@ -97,9 +97,9 @@
                             <a class="dropdown-item" href="#"><img src="/Adminassets/imgs/theme/flag-jp.png" alt="Français">日本語</a>
                             <a class="dropdown-item" href="#"><img src="/Adminassets/imgs/theme/flag-cn.png" alt="Français">中国人</a>
                         </div>
-                    </li>
-                    <li class="dropdown nav-item">
-                        <a class="dropdown-toggle" data-bs-toggle="dropdown" href="#" id="dropdownAccount" aria-expanded="false"> <img class="img-xs rounded-circle" src="/Adminassets/imgs/people/avatar2.jpg" alt="User"></a>
+                    </li> -->
+                    <li class="">
+                        <a class="" data-bs-toggle="" href="#" id="dropdownAccount" aria-expanded="false"> <img class="img-xs rounded-circle" src="/Adminassets/imgs/people/avatar5.jpg" alt="User"></a>
                     </li>
                 </ul>
             </div>
@@ -186,7 +186,7 @@
 
 
              <!-- pagination -->
-            <div class="pagination-area mt-30 mb-50">
+            <!-- <div class="pagination-area mt-30 mb-50">
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-start">
                         <li class="page-item active"><a class="page-link" href="#">01</a></li>
@@ -197,14 +197,14 @@
                         <li class="page-item"><a class="page-link" href="#"><i class="material-icons md-chevron_right"></i></a></li>
                     </ul>
                 </nav>
-            </div>
+            </div> -->
 
 
         </section>
 
 
         <footer class="main-footer font-xs">
-            <div class="row pb-30 pt-15">
+            <!-- <div class="row pb-30 pt-15">
                 <div class="col-sm-6">
                     <script>
                     document.write(new Date().getFullYear())
@@ -215,7 +215,7 @@
                         All rights reserved
                     </div>
                 </div>
-            </div>
+            </div> -->
         </footer>
 
 
