--- a/views/partials/footercopy.ejs
+++ b/views/partials/footercopy.ejs
@@ -89,7 +89,7 @@
       </div>
   </section>
   <div class="container pb-20 wow fadeIn animated">
-      <div class="row">
+      <!-- <div class="row">
           <div class="col-12 mb-20">
               <div class="footer-bottom"></div>
           </div>
@@ -100,7 +100,7 @@
               <p class="text-lg-end text-start font-sm text-muted mb-0">
                   Designed by <a href="http://alithemes.com" target="_blank">Alithemes.com</a>. All rights reserved
               </p>
-          </div>
+          </div> -->
       </div>
   </div>
 </footer>
