--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -201,7 +201,10 @@
                                             <a class="nav-link" id="address-tab" data-bs-toggle="tab" href="#address" role="tab" aria-controls="address" aria-selected="true"><i class="fi-rs-marker mr-10"></i>My Address</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="page-login-register.html"><i class="fi-rs-sign-out mr-10"></i>Logout</a>
+                                          <a class="nav-link" id="wallet-tab" data-bs-toggle="tab" href="#wallet" role="tab" aria-controls="wallet" aria-selected="false"><i class="fi-rs-shopping-bag mr-10"></i>Wallet</a>
+                                      </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/logout"><i class="fi-rs-sign-out mr-10"></i>Logout</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -267,10 +270,7 @@
                                                                 <td colspan="5">No orders found</td>
                                                             </tr>
                                                         <% } %>
-                                                    </tbody>
-                                                    
-                                                    
-                                                    
+                                                    </tbody>                  
                                                 </table>
                                             </div>
                                         </div>
@@ -308,6 +308,55 @@
                                           <% }); %>
                                         </div>
                                       </div>
+                                      <div class="tab-pane fade" id="wallet" role="tabpanel" aria-labelledby="wallet-tab">
+                                        <div class="card">
+                                          <div class="card-header">
+                                            <h5 class="mb-0">My Wallet</h5>
+                                          </div>
+                                          <div class="card-body contact-from-area">
+                                            <div class="row">
+                                              <div class="col-lg-8">
+                                                <div class="wallet-balance">
+                                                  <h6>Wallet Balance: $<span id="wallet-balance"><%= wallet ? wallet.walletBalance.toFixed(2) : '0.00' %></span></h6>
+                                                </div>
+                                                <div class="amount-spent">
+                                                  <h6>Amount Spent: $<span id="amount-spent"><%= wallet ? wallet.amountSpent.toFixed(2) : '0.00' %></span></h6>
+                                                </div>
+                                                <div class="transactions mt-30">
+                                                  <h6>Transactions</h6>
+                                                  <table class="table table-hover">
+                                                    <thead>
+                                                      <tr>
+                                                        <th>Date</th>
+                                                        <th>Description</th>
+                                                        <th>Type</th>
+                                                        <th>Amount</th>
+                                                      </tr>
+                                                    </thead>
+                                                    <tbody id="transaction-list">
+                                                      <% if (wallet && wallet.transactions.length > 0) { %>
+                                                        <% wallet.transactions.forEach(transaction => { %>
+                                                          <tr>
+                                                            <td><%= transaction.transactionDate.toDateString() %></td>
+                                                            <td><%= transaction.description %></td>
+                                                            <td><%= transaction.type %></td>
+                                                            <td>$<%= transaction.amount.toFixed(2) %></td>
+                                                          </tr>
+                                                        <% }) %>
+                                                      <% } else { %>
+                                                        <tr>
+                                                          <td colspan="4">No transactions found</td>
+                                                        </tr>
+                                                      <% } %>
+                                                    </tbody>
+                                                  </table>
+                                                </div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </div>
+                                      
                                     <div class="tab-pane fade active show" id="account-detail" role="tabpanel" aria-labelledby="account-detail-tab">
                                         <div class="card">
                                           <div class="card-header">
