--- a/views/admin/customer.ejs
+++ b/views/admin/customer.ejs
@@ -52,6 +52,11 @@
                         <span class="text">Products</span>
                     </a>
                 </li>
+                <li class= "">
+                    <a class="menu-link" href="/admin/coupon"> <i class="icon material-icons md-star"></i>
+                        <span class="text">Coupon Mnagement</span>
+                    </a>
+                </li>
                 <li class="">
                     <a class="menu-link" href="/admin/order"><i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Orders</span>
