--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -30,7 +30,7 @@
         </div>
         <nav>
             <ul class="menu-aside">
-                <li class="menu-item">
+                <li class="menu-item active">
                     <a class="menu-link" href="/admin/home"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
@@ -48,6 +48,11 @@
                 <li class="">
                     <a class="menu-link" href="/admin/product"> <i class="icon material-icons md-store"></i>
                         <span class="text">Products</span>
+                    </a>
+                </li>
+                <li class= "">
+                    <a class="menu-link" href="/admin/coupon"> <i class="icon material-icons md-star"></i>
+                        <span class="text">Coupon Mnagement</span>
                     </a>
                 </li>
                 <li class="">
